@startuml
title 核心飞行实体继承关系图 (Core Entities Inheritance Hierarchy)

skinparam nodesep 30
skinparam ranksep 50
' skinparam classAttributeIconSize 0

' ================================
' 顶级抽象基类
' ================================
abstract class AbstractFlyingObject {
    # locationX: int
    # locationY: int
    # speedX: int
    # speedY: int
    # image: BufferedImage
    # width: int
    # height: int
    # isValid: boolean

    + AbstractFlyingObject(locationX: int, locationY: int, speedX: int, speedY: int)
    + forward(): void
    + crash(flyingObject: AbstractFlyingObject): boolean
    + setLocation(locationX: double, locationY: double): void
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedX(): int
    + getSpeedY(): int
    + setSpeedX(speedX: int): void
    + setSpeedY(speedY: int): void
    + getImage(): BufferedImage
    + getWidth(): int
    + getHeight(): int
    + notValid(): boolean
    + vanish(): void
}

' ================================
' 飞机派生类群
' ================================
abstract class AbstractAircraft {
    # maxHp: int
    # hp: int
    # shootNum: int
    # power: int
    # direction: int
    # shootStrategy: ShootStrategy

    + AbstractAircraft(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + decreaseHp(decrease: int): void
    + increaseHp(increase: int): void
    + getHp(): int
    + shoot(): List<BaseBullet>
    + setShootStrategy(shootStrategy: ShootStrategy): void
    + setShootNum(shootNum: int): void
    + getShootNum(): int
    + getPower(): int
    + getDirection(): int
}
AbstractFlyingObject <|-- AbstractAircraft

' 1. 英雄机 (单例模式)
class HeroAircraft {
    - {static} instance: HeroAircraft

    ' 构造函数私有化
    - HeroAircraft(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    
    ' 无参获取实例 (双重检查锁)
    + {static} getInstance(): HeroAircraft
    + reset(x: int, y: int): void
    + forward(): void
}
AbstractAircraft <|-- HeroAircraft

' 敌机抽象基类
abstract class AbstractEnemy {
    + AbstractEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + {abstract} getScore(): int
    + {abstract} dropProps(): List<AbstractProp>
    + onBombActive(): void
    # freezeWithRecovery(sleepTimeMs: int): void
}
AbstractAircraft <|-- AbstractEnemy

' 具体敌机实现
class MobEnemy {
    + MobEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + getScore(): int
    + dropProps(): List<AbstractProp>
    + onIceActive(): void
}
AbstractEnemy <|-- MobEnemy

class EliteEnemy {
    + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + getScore(): int
    + dropProps(): List<AbstractProp>
    + onIceActive(): void
}
AbstractEnemy <|-- EliteEnemy

class ElitePlusEnemy {
    + ElitePlusEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + getScore(): int
    + dropProps(): List<AbstractProp>
    + onIceActive(): void
}
AbstractEnemy <|-- ElitePlusEnemy

class EliteProEnemy {
    + EliteProEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + getScore(): int
    + dropProps(): List<AbstractProp>
    + onBombActive(): void
    + onIceActive(): void
}
AbstractEnemy <|-- EliteProEnemy

class BossEnemy {
    + BossEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + getScore(): int
    + dropProps(): List<AbstractProp>
    + onBombActive(): void
    + onIceActive(): void
}
AbstractEnemy <|-- BossEnemy


' ================================
' 子弹派生类群
' ================================
abstract class BaseBullet {
    - power: int
    
    + BaseBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
    + forward(): void
    + getPower(): int
}
AbstractFlyingObject <|-- BaseBullet

class HeroBullet {
    + HeroBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
}
BaseBullet <|-- HeroBullet

class EnemyBullet {
    + EnemyBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
    + onBombActive(): void
    + onIceActive(): void
}
BaseBullet <|-- EnemyBullet


' ================================
' 道具派生类群
' ================================
abstract class AbstractProp {
    + AbstractProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + forward(): void
    + {abstract} active(heroAircraft: HeroAircraft): void
}
AbstractFlyingObject <|-- AbstractProp

class BloodSupply {
    + BloodSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + active(heroAircraft: HeroAircraft): void
}
AbstractProp <|-- BloodSupply

class BulletSupply {
    + BulletSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + active(heroAircraft: HeroAircraft): void
}
AbstractProp <|-- BulletSupply

class BulletPlusSupply {
    + BulletPlusSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + active(heroAircraft: HeroAircraft): void
}
AbstractProp <|-- BulletPlusSupply

' 炸弹道具 (观察目标)
class BombSupply {
    - observers: List<PropObserver>
    
    + BombSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + addObserver(observer: PropObserver): void
    + notifyObservers(): void
    + active(heroAircraft: HeroAircraft): void
}
AbstractProp <|-- BombSupply

' 冰冻道具 (观察目标)
class FreezeSupply {
    - observers: List<PropObserver>
    
    + FreezeSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + addObserver(observer: PropObserver): void
    + notifyObservers(): void
    + active(heroAircraft: HeroAircraft): void
}
AbstractProp <|-- FreezeSupply

@enduml